--- a/src/pug/blocks/_header-search.pug
+++ b/src/pug/blocks/_header-search.pug
@@ -2,11 +2,11 @@
 .header-search-wrapper.bx-sh
 	.container
 		.row
-			.col-3
+			.col-3.col-lg-6.col-sm-12
 				h1 text
-			.col-3
+			.col-3.col-lg-6.col-sm-12
 				h1 text
-			.col-3
+			.col-3.col-lg-6.col-sm-12
 				h1 text
-			.col-3
+			.col-3.col-lg-6.col-sm-12
 				h1 text
