--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 // @import "base/_scroll";
 @import "base/_typography.scss";
 @import "base/_icons.scss";
+@import "base/_vendore-class.scss";
 
 @import "blocks/_preloader.scss";
 @import "blocks/_buttons.scss";
