--- a/src/pug/ui/forms.pug
+++ b/src/pug/ui/forms.pug
@@ -69,6 +69,23 @@ html(lang="ru")
 					pre.
 						+select(plh="Пример заполнения", inpName = 'input_name')
 					hr
+					h3 Поле в форме поиска
+					.form-item.form-item--border
+						.form-input
+							input(type="search" name="search_input" placeholder="Что Вы ищите?")
+							//===== кнопка reset ====
+							button.btn-clear.flx-center(type="reset")
+								svg.svg-close
+									use(href='./img/sprite.svg#svg-close')
+					pre.
+						.form-item.form-item--border
+							.form-input
+								input(type="search" name="search_input" placeholder="Что Вы ищите?")
+								//===== кнопка reset ====
+								button.btn-clear.flx-center(type="reset")
+									svg.svg-close
+										use(href='./img/sprite.svg#svg-close')
+					hr
 					h3 Миксин элемента формы 
 					pre.
 						+form-item(error, tltSide, label="Введите логин", inpName="name", pass)
