--- a/src/scss/blocks/_header-search.scss
+++ b/src/scss/blocks/_header-search.scss
@@ -6,4 +6,36 @@
 	z-index: 9;
 	height: 220px;
 	background: var(--bg-bg-grey);
+	@media (max-width: 1199px) {
+	height: 160px;
+	}
+}
+
+.search-form{
+	max-width: 924px;
+	margin-inline: auto;
+	
+	.btn-clear{
+		position: absolute;
+		z-index: 2;
+		right: 0;
+		top: 50%;
+		transform: translateY(-50%);
+		width: 36px;
+		height: 36px;
+		
+	}
+	.form-input input{
+		padding-right: 50px;
+		height: 36px;
+		padding-top: 8px;
+		padding-bottom: 8px;
+	}
+	input[type="search"]::-webkit-search-cancel-button{display: none;}
+	@media (max-width: 1199px) {
+	  max-width: 800px;
+	}
+	@media (max-width: 767px) {
+	
+	}
 }
