--- a/src/pug/blocks/_header-search.pug
+++ b/src/pug/blocks/_header-search.pug
@@ -6,6 +6,6 @@
 				.form-input
 					input(type="search" name="search_input" placeholder="Что Вы ищите?")
 					//===== кнопка reset ====
-					button.btn-clear.flx-center(type="reset")
+					button.btn-clear(type="reset")
 						svg.svg-close
 							use(href='./img/sprite.svg#svg-close')
