--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -66,11 +66,11 @@
 	color: var(--accent);
 }
 *.txt-center{text-align: center;}
-.flx-center,.flx-center-column{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.flx-center-column{
-	flex-direction: column;
+.link-item{
+	transition: .3s;
+	padding-block: 2px;
+	border-bottom:1px solid transparent;
+	&:hover{
+		border-bottom: 1px solid currentColor;
+	}
 }
