скрипт формы поиска

--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -29,7 +29,7 @@ header.header
 		
 		//=====right column====
 		.header-right-col
-			button.btn-toggle-search
+			button.btn-toggle-search#search-btn
 				svg.svg-search
 					use(href='./img/sprite.svg#svg-search')
 			
