--- a/src/pug/ui/typography.pug
+++ b/src/pug/ui/typography.pug
@@ -96,3 +96,9 @@ html(lang="ru")
 						.txt-14 Regular 14
 					hr
 					.txt-accent Акцентный текст
+					pre.
+						.txt-accent Акцентный текст
+					hr
+					.link-item Ссылка с подчеркиванием по наведению	
+					pre.
+						.link-item Ссылка с подчеркиванием по наведению
