--- a/src/pug/blocks/_header-search.pug
+++ b/src/pug/blocks/_header-search.pug
@@ -1,5 +1,5 @@
 //==== HEADER SEARCH BLOCK ====
-.header-search-wrapper.bx-sh.flx-center
+.header-search-wrapper.bx-sh.flx-center#search-form
 	.container
 		form.search-form
 			.form-item.form-item--border
