--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -57,7 +57,10 @@ body {
 	letter-spacing: -0.02em;
 	-webkit-font-smoothing: antialiased;
 }
-
+body.lock{
+	height: 100vh;
+	overflow: hidden;
+}
 a,
 a:hover {
 	text-decoration: none;
