--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "blocks/_preloader.scss";
 @import "blocks/_buttons.scss";
 @import "blocks/_form.scss";
+@import "blocks/_header-menu.scss";
 @import "blocks/_header-search.scss";
 
 
