--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -5,7 +5,7 @@
 		justify-content: space-between;	
 		background-color: #2e394d;
 		position: relative;
-		color: var(--style);
+		// color: var(--style);
 		
 	}
 	.header-left-col,.header-right-col{
