--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -17,25 +17,35 @@ header.header
 								a(href="#!") Коллекция Мужcкая Весна 2024
 							li
 								a(href="#!") Коллекция Мужcкая Лето 2024
-					li.menu-list-item.menu-item-submenu 
+					li.menu-list-item.menu-item-submenu
 						a(href="#!") Для женщин
 						ul.menu-list-child.bx-sh
 							li
 								a(href="#!") Коллекция Женская Весна 2024
 							li
 								a(href="#!") Коллекция Женская Лето 2024
-					li.menu-list-item 
+					li.menu-list-item
 						a(href="#!") Где купить
-					
+					//====пункт виден в мобильном меню
 					li.menu-list-item.d-none.d-md-block
 						a(href="#!") Оптовикам	
+				//====блок для моб версии ====
+				.header-menu-block.d-none.d-md-block
+					.social-block
+						a(href="#!") 11
+						a(href="#!") 11
+						a(href="#!") 11
+						a(href="#!") 11
+
+					p &copy;NorthBloom  1997 - 2024 г.
 		//=====right column====
 		.header-right-col
 			button.btn-toggle-search#search-btn
 				svg.svg-search
 					use(href='./img/sprite.svg#svg-search')
+			//====пункт виден на экранах от 1024 пикс ===
+			a(href="#!").link-item.d-inline.d-md-none Оптовикам
 			
-			a(href="#!").link-item Оптовикам
 			//=====mobile menu-toggle===
 			button(type="button").menu-toggle.txt-18#menu-toggle
 				span Меню
