--- a/src/scss/blocks/_header-menu.scss
+++ b/src/scss/blocks/_header-menu.scss
@@ -1,7 +1,5 @@
 .menu-list {
 	column-gap: 40px;
-	height: 100%;
-
 	a {
 		color: var(--style);
 		font-size: 18px;
@@ -44,6 +42,7 @@
 	}
 }
 .header-menu-wrapper{
+	
 	@media (max-width: 1023px) {
 	   position: fixed;
 	   top: 64px;
@@ -58,6 +57,10 @@
 			max-width: 375px;
 			background: var(--style);
 			padding: 40px 16px;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			&>*{width: 100%;}
 		}
 		.menu-list{
 			flex-direction: column;
@@ -83,6 +86,7 @@
 				background-color: var(--style);
 			}
 		}
+		.social-block{margin-bottom: 8px;}
 	}
 }
 .menu-toggle{
