--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -155,5 +155,6 @@ input[type="submit"] {
 	border-radius: 50%;
 	background: var(--bg-bg-grey);
 	color: var(--fill-icon);
+	justify-content: center;
 }
 
