--- a/src/scss/base/_vendore-class.scss
+++ b/src/scss/base/_vendore-class.scss
@@ -6,6 +6,9 @@
 		padding: 16px;
 	}
 }
+.bg-grey{
+	background: var(--bg-bg-grey);
+}
 .flx-center,.btn-toggle-search,
 .btn-clear,.flx-center-column {
 	display: flex;
