--- a/src/pug/blocks/_preloader.pug
+++ b/src/pug/blocks/_preloader.pug
@@ -1,5 +1,5 @@
 //===заставка-прелоадер, анимирована при помощи css анимации. Длительность вынесена в переменные ===
-.preloader.flx-center-column#preloader
+.preloader.bg-blue.flx-center-column#preloader
 	//====logo====
 	.logo
 		+svg-icon('logo')
