--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -8,8 +8,8 @@ block content
 			
 			a(href="main.html")
 				span Главная
-			a(href="preloader.html")
-				span Загрузка				
+			a(href="authorization.html")
+				span Страница Авторизации
 			//- a(href="#!")
 			//- 	span Отдельная страница
 			//- a(href="#!")
