--- a/src/pug/ui/forms.pug
+++ b/src/pug/ui/forms.pug
@@ -108,10 +108,16 @@ html(lang="ru")
 							+form-item('error', 'right', "Введите имя", "name", '')
 		
 					hr
-					div
-					h3 Показать / скрыть пароль
+					h3 Форма с серыми полями + Показать / скрыть пароль
 					form.form-light
 						+form-item('', '', "Введите пароль", "pass", 'pass')
+					pre.
+						У формы класс .form-light
+						form.form-light
+							+form-item('', '', "Введите пароль", "pass", 'pass')
+					hr
+						h3 Формы шириной 608пикс - обертка .form-wrapper
+						h3 Формы шириной 960пикс - обертка .form-wrapper.form-wrapper--large
 		//=============== jquery ===================
 		script(src="../libs/jquery/jquery-3.0.0.min.js")
 		//- script(src="../libs/scroll/scroll.min.js")
