--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -11,6 +11,25 @@ select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 1000px #fff inset;
    box-shadow: 0 0 0px 1000px #fff inset;
 }
+form{
+  &>*+*{margin-top: 16px;}
+}
+.form-wrapper,.form-wrapper.form-wrapper--large{
+  width:min(608px, 100%);
+  padding: 64px 40px;
+ 
+  .title-group{
+    margin-bottom: 40px;
+    &>*+*{margin-top: 16px;}
+  }
+  @media (max-width: 1023px) {
+    padding: 32px 16px;
+  }
+}
+
+.form-wrapper.form-wrapper--large{
+  width: min(960px, 100%);
+}
 input,
 textarea, select {
   width: 100%;
@@ -33,6 +52,9 @@ textarea, select {
     padding-inline: 16px;
     background-color: var(--style);
     border: 1px solid var(--style);
+    @media (max-width: 767px) {
+    height: 56px;
+    }
     &.error{
       border-color: var(--error);
     }
@@ -53,6 +75,7 @@ textarea, select {
   }
   .svg-info { color: var(--error); }
 }
+.form-btn{margin-top: 24px;}
 .form-input{
   position: relative;
   input{padding-right: 36px;}
