--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -5,6 +5,9 @@
 		justify-content: space-between;	
 		background-color: #2e394d;
 		position: relative;
+		@media (max-width: 767px) {
+			height: 56px;
+		}
 		
 	}
 	.header-left-col,.header-right-col{
