--- a/src/scss/ui/_ui-navigation.scss
+++ b/src/scss/ui/_ui-navigation.scss
@@ -128,13 +128,14 @@
 	&__cards {
 		display: flex;
 		flex-wrap: wrap;
+		column-gap:16px;
+		row-gap:32px;
 
 	}
 
 	a {
-		width: 30%;
-		margin-left: 20px;
-		margin-right: 20px;
+		width: calc((100% - 32px) / 3);
+		
 		height: 150px;
 		display: flex;
 		flex-direction: column;
@@ -144,7 +145,7 @@
 		text-transform: uppercase;
 		font-weight: 700;
 		box-shadow: 0 0 20px rgba(0, 0, 0, .25);
-		margin-bottom: 24px;
+		
 
 		span {
 			display: block;
@@ -158,5 +159,14 @@
 		width: 100%;
 	}
 }
-
+@media (max-width: 1023px) {
+	.start-page a {
+		width: calc((100% - 16px) / 2);
+	}
+}
+@media (max-width: 599px) {
+	.start-page a {
+		width: 100%;
+	}
+}
 /*//стили для вспомогат страницы - удалить из проектп */
