--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -10,8 +10,8 @@ block content
 			include ../sections/_main-hero
 
 		
-		footer.footer
-			.txt-center FOOTER
+		//- footer.footer
+		//- 	.txt-center FOOTER
 
 block variables
 	-var title = "Главная";
