--- a/src/scss/base/_vendore-class.scss
+++ b/src/scss/base/_vendore-class.scss
@@ -13,7 +13,7 @@
 	background-color: var(--bg-blue);
 	color: var(--style);
 }
-.flx-center,.btn-toggle-search,
+.flx-center,.btn-toggle-search,.center-group,
 .btn-clear,.flx-center-column {
 	display: flex;
 	justify-content: center;
@@ -24,3 +24,45 @@
 	flex-direction: column;
 }
 .w-100{width: 100%!important;}
+.chevron-link{
+	display: flex;
+	align-items: center;
+	column-gap:10px;
+	*[class^="svg-"]{
+		color: inherit;
+	}
+}
+.mt-8{
+	margin-top: 8px;
+}
+.mt-16 {
+	margin-top: 16px;
+}
+.mt-24 {
+	margin-top: 24px;
+}
+.mt-32 {
+	margin-top: 32px;
+}
+.mt-40 {
+	margin-top: 40px;
+}
+.mb-8 {
+	margin-bottom: 8px;
+}
+
+.mb-16 {
+	margin-bottom: 16px;
+}
+
+.mb-24 {
+	margin-bottom: 24px;
+}
+
+.mb-32 {
+	margin-bottom: 32px;
+}
+
+.mb-40 {
+	margin-bottom: 40px;
+}
