--- a/src/pug/sections/_main-hero.pug
+++ b/src/pug/sections/_main-hero.pug
@@ -14,8 +14,8 @@ section.main-hero
 							img(src="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg", alt="img")
 					//===== slide text ====
 					.hero-slide__text
-						.h1-serif Коллекция NorthBloom Лето 2024
-						.center-group.mt-24
+						.h1-serif(data-swiper-parallax-y="-300") Коллекция NorthBloom Лето 2024
+						.center-group.mt-24(data-swiper-parallax-y="-300")
 							a(href="#!").txt-24.chevron-link Для мужчин
 								svg.svg-chevron-right
 									use(href='./img/sprite.svg#svg-chevron-right')
@@ -36,4 +36,54 @@ section.main-hero
 					
 					//===== slide text ====
 					.hero-slide__text
-						h1 SLIDE 2
+						.h1-serif(data-swiper-parallax-y="-300") Коллекция NorthBloom Лето 2024
+						.center-group.mt-24(data-swiper-parallax-y="-300")
+							a(href="#!").txt-24.chevron-link Для мужчин
+								svg.svg-chevron-right
+									use(href='./img/sprite.svg#svg-chevron-right')
+							a(href="#!").txt-24.chevron-link Для женщин
+								svg.svg-chevron-right
+									use(href='./img/sprite.svg#svg-chevron-right')
+			//==== single slide =====
+			.swiper-slide
+				.hero-slide
+					.hero-slide__img
+						picture
+							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
+							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)")
+							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
+							source(srcset="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg" type="image/jpg")
+							
+							img(src="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg", alt="img")
+					//===== slide text ====
+					.hero-slide__text
+						.h1-serif(data-swiper-parallax-y="-300") Коллекция NorthBloom Лето 2024
+						.center-group.mt-24(data-swiper-parallax-y="-300")
+							a(href="#!").txt-24.chevron-link Для мужчин
+								svg.svg-chevron-right
+									use(href='./img/sprite.svg#svg-chevron-right')
+							a(href="#!").txt-24.chevron-link Для женщин
+								svg.svg-chevron-right
+									use(href='./img/sprite.svg#svg-chevron-right')
+			//==== single slide =====
+			.swiper-slide
+				.hero-slide
+					.hero-slide__img
+						picture
+							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
+							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)")
+							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
+							source(srcset="https://bishkekvogue.ru/wp-content/uploads/2023/01/lanidor-21.jpg" type="image/jpg")
+							
+							img(src="https://bishkekvogue.ru/wp-content/uploads/2023/01/lanidor-21.jpg", alt="img")
+					
+					//===== slide text ====
+					.hero-slide__text
+						.h1-serif(data-swiper-parallax-y="-300") Коллекция NorthBloom Лето 2024
+						.center-group.mt-24(data-swiper-parallax-y="-300")
+							a(href="#!").txt-24.chevron-link Для мужчин
+								svg.svg-chevron-right
+									use(href='./img/sprite.svg#svg-chevron-right')
+							a(href="#!").txt-24.chevron-link Для женщин
+								svg.svg-chevron-right
+									use(href='./img/sprite.svg#svg-chevron-right')
