--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -19,7 +19,7 @@ header.header
 								a(href="#!") Коллекция Мужcкая Лето 2024
 					li.menu-list-item.menu-item-submenu
 						a(href="#!") Для женщин
-						ul.menu-list-child.bx-sh
+						ul.menu-list-child.menu-list-child--right.bx-sh
 							li
 								a(href="#!") Коллекция Женская Весна 2024
 							li
