edit-burger-icon

--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -51,7 +51,5 @@ header.header
 			a(href="#!").link-item.d-inline.d-md-none Оптовикам
 			
 			//=====mobile menu-toggle===
-			button(type="button").menu-toggle.txt-18#menu-toggle
-				span Меню
-				svg.svg-close
-					use(href='./img/sprite.svg#svg-close')
+			button(type="button").menu-toggle#menu-toggle
+				span
