--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -11,7 +11,7 @@
 .svg-bar, .svg-check{
 	color: var(--fill-icon);
 }
-.svg-bar, .svg-check, .svg-chevron-down,.svg-chevron-up, .svg-chevron-left, .svg-chevron-right,.svg-close, .svg-dry, .svg-eye, .svg-eye-close, .svg-info, .svg-minus, .svg-paper, .svg-pin, .svg-plus, .svg-search, .svg-video{
+.svg-bar, .svg-check, .svg-chevron-down,.svg-chevron-up, .svg-chevron-left, .svg-chevron-right,.svg-close, .svg-dry, .svg-eye, .svg-eye-close, .svg-info, .svg-minus, .svg-paper, .svg-pin, .svg-plus, .svg-search, .svg-video,.svg-burger{
 	fill: transparent;
 	width: 24px;
 	height: 24px;
