--- a/src/scss/blocks/_header-menu.scss
+++ b/src/scss/blocks/_header-menu.scss
@@ -110,18 +110,82 @@
 		.social-block{margin-bottom: 8px;}
 	}
 	@media (max-width: 767px) {
-	top:56px;
+	top:55px;
 	}
 }
-.menu-toggle{
-	color: var(--style);
-	svg{display: none;}
+
+/*========GAMBURGER======*/
+.menu-toggle {
 	display: none;
-	@media (max-width: 1023px) {
+	flex-shrink: 0;
+	width: 24px;
+	height: 24px;
+	
+	z-index: 11;
+	cursor: pointer;
+	justify-content: center;
+	align-items: center;
+
+}
+
+@media (max-width: 1023px) {
+	.menu-toggle {
 		display: flex;
-		&.active{
-			svg {display: inline-block; color: var(--style)!important}
-			span{display: none;}
-		}
+
 	}
+}
+
+.menu-toggle span {
+	position: relative;
+	height: 2px;
+	width: 18px;
+	border-radius: 3px;
+	background-color: var(--style);
+	-webkit-transition: .2s;
+	-o-transition: .2s;
+	transition: .2s;
+}
+
+.menu-toggle span:after,
+.menu-toggle span:before {
+	content: '';
+	position: absolute;
+	left: 0;
+	height: 2px;
+	background-color: var(--style);
+	border-radius: 5px;
+	right: 0;
+	-webkit-transition: .2s;
+	-o-transition: .2s;
+	transition: .2s;
+}
+
+.menu-toggle span:after {
+	top: -6px;
+}
+
+.menu-toggle span:before {
+	bottom: -6px;
+}
+
+
+.active.menu-toggle span {
+	background-color: transparent !important;
+}
+
+
+.active.menu-toggle span:after {
+	top: 0px;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
+	background-color: var(--fill-icon);
+}
+
+.active.menu-toggle span:before {
+	bottom: 0px;
+	-webkit-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+	background-color: var(--fill-icon);
 }
