--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -60,6 +60,10 @@ body {
 body.lock{
 	height: 100vh;
 	overflow: hidden;
+	padding-left: 17px;
+	@media (max-width: 1199px) {
+		padding-left: 0;
+	}
 }
 a,
 a:hover {
