--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -12,18 +12,20 @@ header.header#header
 				ul.menu-list.flx-center
 					li.menu-list-item.menu-item-submenu 
 						a(href="#!") Для мужчин
-						ul.menu-list-child.bx-sh
-							li
-								a(href="#!") Коллекция Мужcкая Весна 2024
-							li
-								a(href="#!") Коллекция Мужcкая Лето 2024
+						.menu-list-child.bx-sh
+							ul
+								li
+									a(href="#!") Коллекция Мужcкая Весна 2024
+								li
+									a(href="#!") Коллекция Мужcкая Лето 2024
 					li.menu-list-item.menu-item-submenu
 						a(href="#!") Для женщин
-						ul.menu-list-child.menu-list-child--right.bx-sh
-							li
-								a(href="#!") Коллекция Женская Весна 2024
-							li
-								a(href="#!") Коллекция Женская Лето 2024
+						.menu-list-child.menu-list-child--right.bx-sh
+							ul
+								li
+									a(href="#!") Коллекция Женская Весна 2024
+								li
+									a(href="#!") Коллекция Женская Лето 2024
 					li.menu-list-item
 						a(href="#!") Где купить
 					//====пункт виден в мобильном меню
