--- a/src/scss/blocks/_header-menu.scss
+++ b/src/scss/blocks/_header-menu.scss
@@ -41,6 +41,23 @@
 		}
 
 	}
+	@media(min-width:1024px){
+		.menu-list-child{
+			ul{position: relative;
+			}
+			&:before{
+				content: '';
+				position: absolute;
+				top: 0;
+				bottom: 0;
+				left: 50%;
+				transform: translateX(-50%);
+				width: 300vw;
+				background-color: red;
+			}
+		}
+		
+	}
 	@media(min-width:1200px){
 		.menu-item-submenu:hover{
 			.menu-list-child{
@@ -105,6 +122,7 @@
 				box-shadow: none;
 				padding: 0;
 				background-color: var(--style);
+				transform: translateY(0);
 			}
 		}
 		.social-block{margin-bottom: 8px;}
