--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -60,9 +60,9 @@ body {
 body.lock{
 	height: 100vh;
 	overflow: hidden;
-	padding-left: 17px;
+	padding-right: 17px;
 	@media (max-width: 1199px) {
-		padding-left: 0;
+		padding-right: 0;
 	}
 }
 a,
