--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -10,8 +10,7 @@ block content
 			include ../sections/_main-hero
 
 		
-		footer.footer
-			.txt-center FOOTER
+		include ../sections/_footer
 
 block variables
 	-var title = "Главная";
